--- a/src/IdentityServer/IdentityServer.csproj
+++ b/src/IdentityServer/IdentityServer.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="IdentityServer4" Version="2.3.0" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.3.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.0" />
 
     <PackageReference Include="Serilog" Version="2.7.1" />
